fixed min-height of descriptions to align charts better

--- a/paig-server/frontend/webapp/app/styles/css/styles.css
+++ b/paig-server/frontend/webapp/app/styles/css/styles.css
@@ -1054,3 +1054,11 @@ span.diff-danger>span {
   display: flex;
   height: 100%;
 }
+
+.eval-chips{
+  max-width: 100%;
+}
+
+.min-height-50 {
+  min-height: 50px;
+}
